<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.litisapps.myquizapp.MainActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="1. What is the number of squares on a chessboard?"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/chess_number_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_number_here_hint"
            android:inputType="text" />



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="2. Who was told 'Beware the Ides of March.'?"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/q2_radioGroup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/q2_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ2RadioButtonClicked"
                android:text="@string/jolease_caesar" />

            <RadioButton
                android:id="@+id/q2_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ2RadioButtonClicked"
                android:text="@string/augustus_caesar" />

            <RadioButton
                android:id="@+id/q2_rb3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ2RadioButtonClicked"
                android:text="@string/mark_antony" />

            <RadioButton
                android:id="@+id/q2_rb4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ2RadioButtonClicked"
                android:text="@string/cleopatra" />
        </RadioGroup>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="3. Which is St. Petersburg previous name?"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:inputType="textCapWords"/>

        <CheckBox
            android:id="@+id/q3_cb1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/petrograd"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_cb2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/tashkent"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_cb3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/leningrad"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/q3_cb4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="24dp"
            android:text="@string/belgrade"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="16dp"
            android:text="4. Which country this flag represent?"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/flag_image"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:src="@drawable/flag"
            android:layout_alignParentLeft="true"/>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/q4_radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:orientation="vertical"
            android:layout_toRightOf="@+id/flag_image">

            <RadioButton
                android:id="@+id/q4_rb1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ4RadioButtonClicked"
                android:text="@string/thailand" />

            <RadioButton
                android:id="@+id/q4_rb2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onQ4RadioButtonClicked"
                android:text="@string/costa_rika" />
        </RadioGroup>

        </RelativeLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:onClick="OnsubmitAnswers"
            android:text="@string/results" />


    </LinearLayout>
</ScrollView>